<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello world!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="startChatButtonText">Start Chat</string>
    <string name="startWeatherForecastButtonText">Weather</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="LoginText">Login</string>
    <string name="LoginHintText">Login name</string>
    <string name="PasswordText">Password</string>
    <string name="PasswordHintText">Password hint</string>
    <string name="title_activity_list_items">ListItemsActivity</string>
    <string name="cliRadioButton">Radio Button</string>
    <string name="cliCheckBox">Check Box Text</string>
    <string name="cliSwitchText">Switch Text</string>
    <string name="loginButtonText">Log In</string>
    <string name="imageButtonContentDescription">Image Button Content</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="message">Message</string>
    <string name="cliCheckBoxDialogMessage">Finish the activity?</string>
    <string name="cliCheckBoxClickedOkMessage">My information to share</string>
    <string name="startReturnFromCliMessage">ListItemsActivity passed: </string>

    <string name="preference_file_key">com.example.androidlabs.preference_file_key</string>
    <string name="default_email_key">com.example.androidlabs.default_email_key</string>
    <string name="chat_message_id_key">com.example.androidlabs.chat_message_id_key</string>
    <string name="chat_message_details_key">com.example.androidlabs.chat_message_details_key</string>
    <string name="chat_message_to_delete_key">com.example.androidlabs.chat_message_to_delete_key</string>
    <string name="email_default_value">email@domain.com</string>

    <string name="cli_switch_on_text">Switch is on</string>
    <string name="cli_switch_off_text">Switch is off</string>

    <string name="chatSendButtonText">Send</string>
    <string name="chatHintText">Enter a chat message</string>

    <string name="weatherCurrentTempLabel">Current</string>
    <string name="weatherMinTempLabel">Min</string>
    <string name="weatherMaxTempLabel">Max</string>

    <string name="deleteThisMessage">Delete This Message</string>
    <string name="title_activity_test_toolbar">TestToolbarActivity</string>

    <string name="toolbarButtonText">Toolbar</string>
    <string name="about_toast_text">Version 1.0, by Fogel</string>
    <string name="dialog_fire_missiles">Missile Control Confirmation</string>
    <string name="fire">Fire!</string>
    <string name="newMessageText">New Message</string>

</resources>
