<?xml version="1.0" encoding="utf-8"?>
<android.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:rowCount="2"
    android:columnCount="2"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.androidlabs.ListItemsActivity"
    tools:showIn="@layout/activity_list_items">

    <RadioButton
        android:id="@+id/cliRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/cliRadioButton" />

    <CheckBox
        android:id="@+id/cliCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:onClick="handleCheckBoxClick"
        android:text="@string/cliCheckBox" />

    <Switch
        android:id="@+id/cliSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:onClick="handleSwitchClick"
        android:text="@string/cliSwitchText" />

    <ImageButton
        android:id="@+id/cliImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:onClick="handleImageButtonClick"
        android:contentDescription="@string/imageButtonContentDescription"
        app:srcCompat="@android:drawable/btn_star_big_on" />
</android.widget.GridLayout>
