<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.androidlabs.WeatherForecastActivity">

    <ImageView
        android:id="@+id/weatherImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:minHeight="200dp"
        android:minWidth="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/weatherCurrentTempTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherImageView" />

    <TextView
        android:id="@+id/weatherMinTempTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherCurrentTempTextView" />

    <TextView
        android:id="@+id/weatherMaxTempTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherMinTempTextView" />

    <ProgressBar
        android:id="@+id/weatherProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherMaxTempTextView" />

    <TextView
        android:id="@+id/weatherCurrentLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/weatherCurrentTempLabel"
        app:layout_constraintStart_toEndOf="@+id/weatherCurrentTempTextView"
        app:layout_constraintTop_toBottomOf="@+id/weatherImageView" />

    <TextView
        android:id="@+id/weatherMinLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/weatherMinTempLabel"
        app:layout_constraintStart_toEndOf="@+id/weatherMinTempTextView"
        app:layout_constraintTop_toBottomOf="@+id/weatherCurrentLabelTextView" />

    <TextView
        android:id="@+id/weatherMaxLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/weatherMaxTempLabel"
        app:layout_constraintStart_toEndOf="@+id/weatherMaxTempTextView"
        app:layout_constraintTop_toBottomOf="@+id/weatherMinLabelTextView" />
</android.support.constraint.ConstraintLayout>
